--- a/feature-tag/src/App.css
+++ b/feature-tag/src/App.css
@@ -54,7 +54,11 @@ body {
     text-transform: uppercase;
     opacity: 0.6;
     font-size: 12px;
-    font-weight: medium;
+}
+
+.Caption {
+    display: table-caption;
+    caption-side: top-outside;
 }
 
 .FeatureTag .RepoCol {
@@ -86,12 +90,15 @@ body {
     opacity: 0.4;
 }
 
-.FeatureTag-Row div:nth-child(8) {
-    opacity: 0.4;
+.FeatureTag-Row div:nth-child(9) {
     padding-right: 30px;
 }
 
-.FeatureTag-Row div:nth-child(9) {
+.FeatureTag-Row div:nth-child(10) {
+    padding-right: 20px;
+}
+
+.FeatureTag-Row div:nth-child(11) {
     padding-right: 20px;
 }
 
