--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
                 0px 2px 4px rgba(0, 0, 0, 0.3);
     padding: 16px;
+    padding-bottom: 8px;
     border-radius: 2px;
 }
 
@@ -125,4 +126,26 @@ body {
 .MetaTitle {
     position: relative;
     top: -20px;
+}
+
+.TokenInput {
+    text-transform: uppercase;
+    font-size: 8px;
+    float: right;
+    cursor: pointer;
+    margin-top: 6px;
+}
+
+.TokenInput.invalid-credentials {
+    color: red;
+}
+
+
+.TokenInput.unauthenticated {
+    color: lightgrey;
+}
+
+.TokenInput.authenticated {
+    color: green;
+    opacity: 0.3;
 }
