--- a/src/feature-dashboard.css
+++ b/src/feature-dashboard.css
@@ -5,7 +5,7 @@ body {
     font-variant-numeric: tabular-nums;
 }
 
-.FeatureTag {
+.Summary {
     margin: 20px;
     display: inline-block;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
@@ -15,7 +15,7 @@ body {
     border-radius: 2px;
 }
 
-.FeatureTag-Header {
+.Summary-Header {
     margin-bottom: 22px;
     white-space: nowrap;
     margin-top: 4px;
@@ -23,13 +23,13 @@ body {
     padding-right: 4px;
 }
 
-.FeatureTag-Header .Label {
+.Summary-Header .Label {
     display: inline-block;
     margin-left: 0px;
     margin-right: auto;
 }
 
-.FeatureTag-Header .PercentComplete {
+.Summary-Header .PercentComplete {
     float: right;
     display: inline-block;
     opacity: 0.4;
@@ -38,20 +38,20 @@ body {
     margin-right: 0px;
 }
 
-.FeatureTag-Table {
+.Summary-Table {
     display: table;
 }
 
-.FeatureTag-Row {
+.Summary-Row {
     display: table-row;
 }
 
-.FeatureTag-Row div {
+.Summary-Row div {
     display: table-cell;
     padding: 3px;
 }
 
-.FeatureTag-TableHeader div {
+.Summary-TableHeader div {
     text-transform: uppercase;
     opacity: 0.6;
     font-size: 12px;
@@ -62,12 +62,12 @@ body {
     caption-side: top-outside;
 }
 
-.FeatureTag .RepoCol {
+.Summary .RepoCol {
     display: table-column;
     background-color: green;
 }
 
-.FeatureTag-Column {
+.Summary-Column {
     display: table-column;
 }
 
@@ -75,31 +75,31 @@ body {
     padding-left: 6px;
 }
 
-.FeatureTag-Row div:nth-child(1) {
+.Summary-Row div:nth-child(1) {
     padding-right: 30px;
 }
 
-.FeatureTag-Row div:nth-child(4) {
+.Summary-Row div:nth-child(4) {
     padding-right: 30px;
 }
 
-.FeatureTag-Row div:nth-child(6) {
+.Summary-Row div:nth-child(6) {
     opacity: 0.4;
 }
 
-.FeatureTag-Row div:nth-child(7) {
+.Summary-Row div:nth-child(7) {
     opacity: 0.4;
 }
 
-.FeatureTag-Row div:nth-child(9) {
+.Summary-Row div:nth-child(9) {
     padding-right: 30px;
 }
 
-.FeatureTag-Row div:nth-child(10) {
+.Summary-Row div:nth-child(10) {
     padding-right: 20px;
 }
 
-.FeatureTag-Row div:nth-child(11) {
+.Summary-Row div:nth-child(11) {
     padding-right: 20px;
 }
 
