--- a/src/feature-dashboard.css
+++ b/src/feature-dashboard.css
@@ -3,16 +3,52 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-variant-numeric: tabular-nums;
+    background: #f8f9fa;
+}
+
+.Plan {
+    font-family: Arial;
+    font-size: 15px;
+    margin: 12px;
+    display: inline-block;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
+                0px 2px 4px rgba(0, 0, 0, 0.3);
+    padding: 16px;
+    padding-right: 34px;
+    padding-bottom: 8px;
+    border-radius: 2px;
+    background: white;
+}
+
+.Plan .state {
+    opacity: 0.4;
+}
+
+.Plan .label {
+    margin-bottom: 0px;
+}
+
+.Plan ul {
+    margin-top: 0px;
+}
+
+.Plan .phase {
+    padding-bottom: 4px;
+}
+
+.Plan li {
+    line-height: 25px;
 }
 
 .Summary {
-    margin: 20px;
+    margin: 12px;
     display: inline-block;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
                 0px 2px 4px rgba(0, 0, 0, 0.3);
     padding: 16px;
     padding-bottom: 8px;
     border-radius: 2px;
+    background: white;
 }
 
 .Summary-Header {
