--- a/src/feature-dashboard.css
+++ b/src/feature-dashboard.css
@@ -6,6 +6,19 @@ body {
     background: #f8f9fa;
 }
 
+.Burndown {
+    margin: 12px;
+    display: inline-block;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
+                0px 2px 4px rgba(0, 0, 0, 0.3);
+    padding: 16px;
+    padding-right: 34px;
+    padding-bottom: 8px;
+    border-radius: 2px;
+    background: white;
+    width: 90%;
+}
+
 .Plan {
     font-family: Arial;
     font-size: 15px;
