--- a/src/feature-dashboard.css
+++ b/src/feature-dashboard.css
@@ -22,31 +22,24 @@ body {
     background: #f8f9fa;
 }
 
-.Burndown {
+.raised-box {
     margin: 12px;
-    display: inline-block;
+    padding: 8px 16px;
+    background: white;
+    border-radius: 2px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
                 0px 2px 4px rgba(0, 0, 0, 0.3);
-    padding: 16px;
-    padding-right: 34px;
-    padding-bottom: 8px;
-    border-radius: 2px;
-    background: white;
+}
+
+.Burndown {
+    display: inline-block;
     width: 90%;
 }
 
 .Plan {
     font-family: Arial;
     font-size: 15px;
-    margin: 12px;
     display: inline-block;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
-                0px 2px 4px rgba(0, 0, 0, 0.3);
-    padding: 16px;
-    padding-right: 34px;
-    padding-bottom: 8px;
-    border-radius: 2px;
-    background: white;
 }
 
 .Plan .state {
@@ -74,14 +67,7 @@ body {
 }
 
 .Summary {
-    margin: 12px;
     display: inline-block;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
-                0px 2px 4px rgba(0, 0, 0, 0.3);
-    padding: 16px;
-    padding-bottom: 8px;
-    border-radius: 2px;
-    background: white;
 }
 
 .Summary-Header {
@@ -219,12 +205,6 @@ body {
 }
 
 nav {
-    margin: 12px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2),
-                0px 2px 4px rgba(0, 0, 0, 0.3);
-    padding: 8px 16px;
-    border-radius: 2px;
-    background: white;
     width: min-content;
     font-size: 12px;
 }
