Add button for creating plan issues
This appends an "Add" button to any leaf categories which pre-fills any required
labels needed for that category to avoid confusion.

--- a/src/feature-dashboard.css
+++ b/src/feature-dashboard.css
@@ -60,6 +60,19 @@ body {
     color: green;
 }
 
+.Plan .new-issue {
+    background-color: #269f42;
+    color: #fff;
+    text-decoration: none;
+    padding: 1px 4px;
+    border-radius: 4px;
+    opacity: 0.5;
+}
+
+.Plan .new-issue:hover {
+    opacity: 1;
+}
+
 .Plan .label.blocked {
     color: red;
 }
